packages/svelte/tests/validator/samples/global-event-reference/input.svelte
<script>
    let onclick;
</script>

<button {onclick}></button>
<button onclick={onclick}></button>

<button {onTypeScriptWillCatchThis}></button>
<button onTypeScriptWillCatchThis={onTypeScriptWillCatchThis}></button>

<button {onkeydown}></button>
<button onkeydown={onkeydown}></button>
