packages/svelte/tests/compiler-errors/samples/runes-props-not-called/main.svelte
<script>
	let { a } = $props;
</script>
